--- a/app/src/main/res/layout/information_place.xml
+++ b/app/src/main/res/layout/information_place.xml
@@ -21,6 +21,14 @@
             android:layout_marginBottom="15dp"
             android:background="@drawable/ic_back" />
 
+        <Button
+            android:id="@+id/like"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="right"
+            android:layout_marginLeft="300dp"
+            android:gravity="right"
+            android:background="@drawable/heart_button" />
     </LinearLayout>
 
     <ScrollView
@@ -36,30 +44,108 @@
 
             <ImageView
                 android:id="@+id/plinfoTab_placeimg"
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="411dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/place_img" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:text="장소"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:textSize="20dp" />
-
-
-            <Button
+                android:id="@+id/plinfoTab_subject"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="좋아요"
-                android:id="@+id/like"/>
+                android:layout_gravity="left"
+                android:textSize="23dp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/ic_bookmark" />
+
+                <TextView
+                    android:id="@+id/plinfoTab_concept"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/ic_bookmark" />
+
+                <TextView
+                    android:id="@+id/plinfoTab_maxnum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/ic_bookmark" />
+
+                <TextView
+                    android:id="@+id/plinfoTab_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/plinfoTab_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:textSize="17dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="500dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/plinfoTab_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="13dp"/>
+
+                <TextView
+                    android:id="@+id/plinfoTab_writer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="13dp"/>
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
