--- a/app/src/main/res/layout/information_activity.xml
+++ b/app/src/main/res/layout/information_activity.xml
@@ -20,6 +20,14 @@
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/ic_back" />
+        <Button
+            android:id="@+id/like"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="right"
+            android:layout_marginLeft="300dp"
+            android:background="@drawable/heart_button"
+            android:gravity="right" />
 
     </LinearLayout>
 
@@ -33,11 +41,10 @@
             android:gravity="center"
             android:orientation="vertical">
 
-
             <ImageView
                 android:id="@+id/ainfoTab_activityimg"
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
+                android:layout_width="411dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
@@ -52,7 +59,57 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:textSize="20dp" />
+                android:id="@+id/ainfoTab_subject"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="30sp"
+                android:paddingTop="30sp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/star"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ainfoTab_type"
+                    android:paddingLeft="10sp"
+                    android:text=""
+                    android:textSize="20dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="30sp"
+                android:paddingTop="30sp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/star"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ainfoTab_object"
+                    android:paddingLeft="10sp"
+                    android:textSize="20dp"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
