--- a/app/src/main/res/layout/row_activity.xml
+++ b/app/src/main/res/layout/row_activity.xml
@@ -3,19 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:ndroid="http://schemas.android.com/tools"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/back_activityrow"
     android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/activityImg"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/back_corner_roundround"
-        ndroid:scaleType="centerCrop"
-        app:srcCompat="@drawable/place_img"/>
+        app:srcCompat="@drawable/place_img"
+        android:scaleType="fitXY"/>
 
     <TextView
         android:id="@+id/subjectText"
@@ -23,10 +25,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_gravity="center_horizontal"
-        android:fontFamily="@font/noto_serif_h"
-        android:text="코워킹스페이스를 재해석한 공간"
-        android:textSize="18dp"/>
+        android:text="코워킹스페이스를 재해석한 f공간"
+        android:textSize="15dp"/>
 
 </LinearLayout>
 
