--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="160dp"
-    android:layout_height="160dp"
-    android:layout_margin="10dp"
+    android:layout_width="180dp"
+    android:layout_height="wrap_content"
+    android:background="@drawable/back_mainrow"
     android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/home_Img"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="130dp"
         android:layout_gravity="center_horizontal"
         app:srcCompat="@drawable/place_img"
@@ -17,9 +17,12 @@
 
     <TextView
         android:id="@+id/home_Subject"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
         android:text="코워킹스페이스를 재해석한 f공간"
         android:textSize="15dp"/>
