--- a/app/src/main/res/layout/row_place.xml
+++ b/app/src/main/res/layout/row_place.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
+    android:background="@drawable/back_activityrow"
     android:orientation="vertical">
 
 
@@ -22,7 +23,9 @@
         android:id="@+id/plSubjectText"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_gravity="center_horizontal"
         android:text="코워킹스페이스를 재해석한 f공간"
         android:textSize="15dp"/>
