--- a/app/src/main/res/layout/information_place.xml
+++ b/app/src/main/res/layout/information_place.xml
@@ -111,14 +111,21 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingLeft="30sp"
-                android:paddingTop="30sp">
+                android:paddingTop="20dp">
 
                 <ImageView
-                    android:layout_width="20dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_gravity="center_vertical"
+                    app:srcCompat="@drawable/ic_pushpin_black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="25dp"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/ic_bookmark" />
+                    android:text="유형"
+                    android:gravity="center"/>
 
                 <TextView
                     android:id="@+id/plinfoTab_type"
@@ -127,7 +134,8 @@
                     android:fontFamily="sans-serif"
                     android:paddingLeft="10sp"
                     android:text="type"
-                    android:textSize="18dp" />
+                    android:textColor="#000000"
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -136,21 +144,28 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingLeft="30sp">
-
                 <ImageView
-                    android:layout_width="20dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_gravity="center_vertical"
+                    app:srcCompat="@drawable/ic_pushpin_black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="25dp"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/ic_bookmark" />
+                    android:text="가격"
+                    android:gravity="center"/>
 
                 <TextView
                     android:id="@+id/plinfoTab_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10sp"
+                    android:textColor="#000000"
                     android:text="price"
-                    android:textSize="20dp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -159,23 +174,38 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingLeft="30sp">
-
                 <ImageView
-                    android:layout_width="20dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_gravity="center_vertical"
+                    app:srcCompat="@drawable/ic_pushpin_black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="25dp"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/ic_bookmark" />
+                    android:text="인원"
+                    android:gravity="center"/>
 
                 <TextView
                     android:id="@+id/plinfoTab_maxnum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10sp"
+                    android:textColor="#000000"
                     android:text="maxnum"
-                    android:textSize="20dp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/lightGray"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -183,23 +213,33 @@
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:paddingLeft="30sp"
+                android:gravity="top"
                 android:paddingRight="10sp">
-
                 <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="20dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_gravity="top"
+                    app:srcCompat="@drawable/ic_pushpin_black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="25dp"
-                    android:layout_gravity="center|fill_vertical"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/ic_bookmark" />
+                    android:layout_gravity="top"
+                    android:text="내용"
+                    android:gravity="center"/>
 
                 <TextView
                     android:id="@+id/plinfoTab_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:paddingLeft="10sp"
-                    android:textSize="20sp" />
+                    android:layout_marginRight="15dp"
+                    android:textColor="#000000"
+                    android:text="content\nㅜㅇㄹㅇㄹ"
+                    android:textSize="16dp" />
             </LinearLayout>
 
         </LinearLayout>
